--- a/03_angularjs_prod/index.html
+++ b/03_angularjs_prod/index.html
@@ -1,7 +1,24 @@
-<html ng-app="prod">
+<html ng-app="prod"  style="width: 250px;">
     <head>
         <title>Prod Angular JS</title>
     </head>
+
+    <!--<style type="text/css">-->
+
+        <!--.ng-scope {-->
+            <!--border-color: red;-->
+            <!--border-style: solid;-->
+            <!--border-width: 2px;-->
+        <!--}-->
+
+        <!--.ng-scope div {-->
+            <!--border-color: blue;-->
+        <!--}-->
+
+        <!--.ng-scope ul {-->
+            <!--border-color: green;-->
+        <!--}-->
+    <!--</style>-->
 
     <body>
 
