--- a/03_angularjs_prod/index.html
+++ b/03_angularjs_prod/index.html
@@ -3,22 +3,22 @@
         <title>Prod Angular JS</title>
     </head>
 
-    <style type="text/css">
+    <!--<style type="text/css">-->
 
-        .ng-scope {
-            border-color: red;
-            border-style: solid;
-            border-width: 2px;
-        }
+        <!--.ng-scope {-->
+            <!--border-color: red;-->
+            <!--border-style: solid;-->
+            <!--border-width: 2px;-->
+        <!--}-->
 
-        .ng-scope div {
-            border-color: blue;
-        }
+        <!--.ng-scope div {-->
+            <!--border-color: blue;-->
+        <!--}-->
 
-        .ng-scope ul {
-            border-color: green;
-        }
-    </style>
+        <!--.ng-scope ul {-->
+            <!--border-color: green;-->
+        <!--}-->
+    <!--</style>-->
 
     <body>
 
@@ -40,6 +40,7 @@
         <script src="../01_angularjs_basics/js/angular.js"></script>
 
         <script src="app.js"></script>
+
         <script src="greeting-service.js"></script>
         <script src="greeting-ctrl.js"></script>
 
