+ compile + link function

--- a/04_angularjs_directive/index.html
+++ b/04_angularjs_directive/index.html
@@ -3,27 +3,27 @@
         <title>Angular JS, Custom Directive</title>
     </head>
 
-    <style type="text/css">
+    <!--<style type="text/css">-->
 
-        .ng-scope {
-            border-color: red;
-            border-style: solid;
-            border-width: 2px;
-        }
+        <!--.ng-scope {-->
+            <!--border-color: red;-->
+            <!--border-style: solid;-->
+            <!--border-width: 2px;-->
+        <!--}-->
 
-        .ng-scope div {
-            border-color: blue;
-        }
+        <!--.ng-scope div {-->
+            <!--border-color: blue;-->
+        <!--}-->
 
-        .ng-scope ul {
-            border-color: green;
-        }
+        <!--.ng-scope ul {-->
+            <!--border-color: green;-->
+        <!--}-->
 
-        .ng-scope oyu-replace {
-            border-color: cyan;
-        }
+        <!--.ng-scope oyu-replace {-->
+            <!--border-color: cyan;-->
+        <!--}-->
 
-    </style>
+    <!--</style>-->
 
     <body style="padding-top: 100px;">
 
@@ -31,12 +31,14 @@
             Your name: <input ng-model="name">&nbsp;&nbsp;&nbsp;{{name}}
 
             <!--<div bg-color="fff000">-->
-            <!--&lt;!&ndash;<div>&ndash;&gt;-->
+            <!--<div>-->
                 <!--<oyu-replace>This text will be replaced with $scope.name</oyu-replace>-->
             <!--</div>-->
 
             <br><br>
-            <t-compile>AAAAA</t-compile>
+            <!--<t-compile>AAAAA</t-compile><br>-->
+            <!--<t-compile>BBBBB</t-compile><br>-->
+
         </div>
 
         <!--<inner-content></inner-content>-->
